# jarvis-nebula

./: .env.example  .gitignore  .prettierignore  Cargo.toml  PROJECT_PLAN.md  README.md  package.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  agent.py  config.py  graph.py  health.py  router.py  voice.py
backend/app/core/: config.py
backend/app/graph/: seed_graph.py
backend/app/models/: graph.py  voice.py
backend/app/services/: neo4j_graph.py  voice_service.py
backend/app/ws/: __init__.py  handlers.py
backend/jarvis_nebula_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: test_api.py  test_graph_service.py  test_voice_api.py
docs/: PHASE_0_CHECKLIST.md  ROADMAP_BCI_FUTURE.md  ROADMAP_DESKTOP.md
docs/adr/: 001-shift-from-file-to-task-primitive.md  002-tauri-over-electron.md  003-cerebras-as-default-llm-provider.md  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/e2e/: smoke.spec.js
frontend/src/: main.js  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/src/: main.rs
frontend/src/app/: createApp.js  createApp.test.js
frontend/src/graph/: generateDemoGraph.js  generateDemoGraph.test.js
frontend/src/input/: classifyHandGesture.js  classifyHandGesture.test.js  createGestureStateMachine.js  createGestureStateMachine.test.js  createHandOverlayRenderer.js  createHandTrackingController.js  createInputMerger.js  poseTracking.js  poseTracking.test.js  smoothLandmarks.js
frontend/src/navigation/: createLayerStack.js  createLayerStack.test.js  createLayerStore.js  createLayerStore.test.js
frontend/src/render/: createLayerCard.js  createLayerStage.js  createNebulaScene.js  layoutLayerNodes.js
frontend/src/services/: graphApi.js  voiceApi.js
frontend/src/services/config/: loadEnvConfig.js  loadEnvConfig.test.js
frontend/src/services/llm/: cerebrasClient.js  cerebrasClient.test.js  geminiClient.js  geminiClient.test.js  index.js  index.test.js
frontend/src/ui/: formatters.js
frontend/src/voice/: createVoiceController.js  routeVoiceCommand.js  routeVoiceCommand.test.js  voiceFeedback.js
infra/: docker-compose.yml
scripts/: dev-full.ps1  geminiSmoke.js  install-rust.ps1  llmSmoke.js
