[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-nebula-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for Jarvis Nebula."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.3",
  "google-generativeai==0.8.6",
  "neo4j==6.1.0",
  "uvicorn[standard]==0.44.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
  "ruff==0.15.9"
]
tracking = [
  "mediapipe==0.10.33",
  "opencv-python==4.13.0.92"
]
voice = [
  "edge-tts==7.2.8",
  "faster-whisper==1.2.1",
  "pyttsx3==2.99"
]

[project.scripts]
jarvis-nebula-api = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["app", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
